--- a/.github/workflows/qqreads.yml
+++ b/.github/workflows/qqreads.yml
@@ -6,7 +6,7 @@ name: 企鹅读书
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/7 * * * *'
+     - cron: '*/7 0-24 * * *'
   watch:
     types: started
 
