--- a/.github/workflows/qqread(搭配js食用).yml
+++ b/.github/workflows/qqread(搭配js食用).yml
@@ -41,6 +41,17 @@ jobs:
           npm install
           npm install got
           npm install tough-cookie
-      - name: '运行 【企鹅阅读】'
+      - name: '运行 【企鹅读书】'
+        if: env.QQREAD_TIMEHD
         run: |
-          node qqread.js
+          cd ~/qqreads
+          node Task/qqreads.js
+        env:
+          
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
