--- a/.github/workflows/qqread(搭配js食用).yml
+++ b/.github/workflows/qqread(搭配js食用).yml
@@ -44,7 +44,7 @@ jobs:
       - name: '运行 【企鹅读书】'
         if: env.QQREAD_TIMEHD
         run: |
-          node Task/qqreads.js
+          node qqreads.js
         env:
           
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
