--- a/.github/workflows/qqread(搭配js食用).yml
+++ b/.github/workflows/qqread(搭配js食用).yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: z2691523/qqreads/Task
+          repository: z2691523/qqreads
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -44,7 +44,7 @@ jobs:
       - name: '运行 【企鹅读书】'
         if: env.QQREAD_TIMEHD
         run: |
-          node qqreads.js
+          node Task/qqreads.js
         env:
           
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
