--- a/.github/workflows/qqread(搭配js食用).yml
+++ b/.github/workflows/qqread(搭配js食用).yml
@@ -6,7 +6,7 @@ name: 企鹅阅读
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/11 */1 * * *'
+    - cron: '0,11,22,33,44,55 */1 * * *'
   watch:
     types: started
   repository_dispatch:
